--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "domhandler": "^2.3.0",
     "domutils": "^1.5.1",
-    "excel-export": "^0.4.1",
+    "excel4node": "^0.4.0",
     "htmlparser2": "^3.9.0",
     "node-fetch": "^1.3.3"
   }
