--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   },
   "homepage": "https://github.com/CarterLi/killing-city-excel-exporter#readme",
   "dependencies": {
+    "command-line-args": "^2.1.4",
     "domhandler": "^2.3.0",
-    "domutils": "^1.5.1",
     "excel4node": "^0.4.0",
     "htmlparser2": "^3.9.0",
-    "node-fetch": "^1.3.3"
+    "request-promise": "^2.0.0"
   }
 }
