--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "module": "commonjs",
         "sourceMap": true,
-        "target": "ES6",
+        "target": "es6",
         "moduleResolution": "classic"
     }
 }
